--- a/index.css
+++ b/index.css
@@ -12,7 +12,10 @@ body {
 main {
     max-width: 600px;
     width: 100%;
-    margin: 24px auto;
+    margin-top: 24px;
+    margin-bottom: 24px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 section{
